// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCheckableCard is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel--row euiCheckableCard testClass1 testClass2 css-aq0czf-euiPanel-m-plain-hasBorder-euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner css-gs0myr-euiPanel-none-m-subdued-isClickable"
  >
    <div
      aria-label="aria-label"
      class="euiRadio euiRadio--noLabel"
      data-test-subj="test subject string"
    >
      <input
        class="euiRadio__input"
        id="id"
        type="radio"
      />
      <div
        class="euiRadio__circle"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner css-cu48yn-euiPanel-grow-none-m-transparent"
  >
    <label
      class="euiCheckableCard__label css-a2fh8y-euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`EuiCheckableCard renders a checkbox when specified 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel--row euiCheckableCard testClass1 testClass2 css-aq0czf-euiPanel-m-plain-hasBorder-euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner css-gs0myr-euiPanel-none-m-subdued-isClickable"
  >
    <div
      class="euiCheckbox euiCheckbox--noLabel css-1i7f7gp-euiCheckbox"
    >
      <input
        aria-label="aria-label"
        class="euiCheckbox__input"
        data-test-subj="test subject string"
        id="id"
        type="checkbox"
      />
      <div
        class="euiCheckbox__square"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner css-cu48yn-euiPanel-grow-none-m-transparent"
  >
    <label
      class="euiCheckableCard__label css-a2fh8y-euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`EuiCheckableCard renders children 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel--row euiCheckableCard css-aq0czf-euiPanel-m-plain-hasBorder-euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner css-gs0myr-euiPanel-none-m-subdued-isClickable"
  >
    <div
      class="euiRadio euiRadio--noLabel"
    >
      <input
        class="euiRadio__input"
        id="id"
        type="radio"
      />
      <div
        class="euiRadio__circle"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner css-cu48yn-euiPanel-grow-none-m-transparent"
  >
    <label
      aria-describedby="id-details"
      class="euiCheckableCard__label css-a2fh8y-euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
    <div
      class="euiCheckableCard__children css-1op4a2-euiCheckableCard__children"
      id="id-details"
    >
      Child
    </div>
  </div>
</div>
`;

exports[`EuiCheckableCard renders disabled 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel--row euiCheckableCard css-aq0czf-euiPanel-m-plain-hasBorder-euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner css-lufr4v-euiPanel-none-m-subdued"
  >
    <div
      class="euiRadio euiRadio--noLabel"
    >
      <input
        class="euiRadio__input"
        disabled=""
        id="id"
        type="radio"
      />
      <div
        class="euiRadio__circle"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner css-cu48yn-euiPanel-grow-none-m-transparent"
  >
    <label
      class="euiCheckableCard__label css-bee9g1-euiCheckableCard__label-isDisabled"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`EuiCheckableCard renders panel props 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel--row euiCheckableCard css-2fdj7g-euiPanel-m-plain-hasShadow-euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner css-gs0myr-euiPanel-none-m-subdued-isClickable"
  >
    <div
      class="euiRadio euiRadio--noLabel"
    >
      <input
        class="euiRadio__input"
        id="id"
        type="radio"
      />
      <div
        class="euiRadio__circle"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner css-cu48yn-euiPanel-grow-none-m-transparent"
  >
    <label
      class="euiCheckableCard__label css-a2fh8y-euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;
